# lattice-boltzmann-method

./: .gitignore  CMakeLists.txt  main.cpp  mrtcg-rayleigh-taylor-gamma3.toml  parameters.toml
src/: colour.cpp  colour.hpp  differential.cpp  differential.hpp  domain.cpp  domain.hpp  ibm.cpp  ibm.hpp  main.cpp  params.cpp  params.hpp  rk.cpp  rk.hpp  solver.cpp  solver.hpp  ulbm.cpp  ulbm.hpp  utils.cpp  utils.hpp
test/: cylinder_test.cpp  decompose_domain.cpp  decompose_domain_loop.cpp  domain_boundaries_test.cpp  free_stream_test.cpp  gravity_test.cpp  horizontal_poiseuille_test.cpp  mrt_rayleigh_taylor.cpp  mrtcg_rayleigh_taylor.cpp  mrtcg_static_droplet.cpp  rectangle_sedimentation_test.cpp  rk_rayleigh_taylor_test.cpp  rk_static_droplet_test.cpp  specular_boundary_test.cpp  static_droplet_test.cpp  test_horizontal_poiseuille.cpp  ulbm_double_shear_flow.cpp  ulbm_poiseuille.cpp  vertical_poiseuille_test.cpp
